added nested routes, added periodic data fetching functionality.

--- a/src/App.css
+++ b/src/App.css
@@ -2091,7 +2091,7 @@ section {
 }
 #sidebar-wrapper {
     min-height: 100vh !important;
-    width: 100vw;
+    /* width: 100vw; */
     margin-left: -1rem;
     -webkit-transition: margin 0.25s ease-out;
     -moz-transition: margin 0.25s ease-out;
