--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
     background-color: #1a1d20 !important;
+    overflow-x: hidden;
 }
 
 a {
